src/test/resources/public/input/typechecking/pass/pass_Magda01.jova
class Nested {

  public string fortyTwo() {
    return "42";
  }

  public int sixtyTwo() {
    return 62;
  }

  public int nestedIsland() {
  
    int foo;

    foo = fortyTwo() + sixtyTwo();

    return sixtyTwo();
  }
}
