src/test/resources/public/input/typechecking/fail/double_decl/fail05.jova
class Nested {

  public int fortyTwo(int x, string x) {
    return 42;
  }
}
